ghost/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ghost
  labels:
    app: ghost
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ghost
  template:
    metadata:
      labels:
        app: ghost
    spec:
      containers:
      - name: ghost
        image: ghost:alpine
        imagePullPolicy: Always
        ports:
          - containerPort: 2368
        volumeMounts:
          #- name: ghost-content
          #  mountPath: /var/lib/ghost/content
          #  readOnly: false
        - name: ghost-config-prod
          mountPath: /var/lib/ghost/config.production.json
          subPath: config.production.json
        - name: tmp # This is the temporary volume mount to allow loading themes
          mountPath: /tmp
          readOnly: false
      nodeName: lois
      volumes:
        #- name: ghost-content
        #  persistentVolumeClaim:
        #    claimName: ghost-pvc
      - name: ghost-config
        secret:
          secretName: ghost-env
      - name: ghost-config-prod
        secret:
          secretName: ghost-config-prod
          defaultMode: 420
      - name: tmp
        emptyDir:
          sizeLimit: 64Mi
